combined into single ipython notebook

--- a/hadoop/classify/naive_bayes.ipynb
+++ b/hadoop/classify/naive_bayes.ipynb
@@ -18,7 +18,6 @@
     "from pyspark.ml import Pipeline\n",
     "from pyspark.ml.classification import NaiveBayes\n",
     "from pyspark.ml.feature import HashingTF, Tokenizer\n",
-    "from pyspark.sql import Row\n",
     "\n",
     "sc = pyspark.SparkContext()\n",
     "sqlContext = SQLContext(sc)"
@@ -26,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,17 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+------------------+--------------------+-----+\n|                id|                text|label|\n+------------------+--------------------+-----+\n|514511437985611776|best option manov...|  0.0|\n|492887601045467137|curated list awes...|  0.0|\n|464730495213768704|python data analy...|  0.0|\n|443215773168066560|checked text spee...|  0.0|\n|443004371425849344|openscience pytho...|  0.0|\n+------------------+--------------------+-----+\nonly showing top 5 rows\n\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# convert the text label into a numeric one\n",
     "def numeric_label(data_str):\n",
@@ -70,38 +61,24 @@
     "numeric_label_udf = udf(numeric_label, DoubleType())\n",
     "\n",
     "num_label_df = text_label_df.withColumn(\"label\", numeric_label_udf(text_label_df['text_label']))\n",
-    "training_df = num_label_df.select(num_label_df['id'], num_label_df['text'], num_label_df['label'])\n",
-    "training_df.show(5)"
+    "data_set = num_label_df.select(num_label_df['id'], num_label_df['text'], num_label_df['label'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'NaiveBayes' object has no attribute 'pi'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-8bd721b5aa81>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Fit the pipeline to training documents.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpipeline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtraining_df\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mnb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpi\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mnb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtheta\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NaiveBayes' object has no attribute 'pi'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Configure an ML pipeline, which consists of tree stages: tokenizer, hashingTF, and lr.\n",
-    "tokenizer = Tokenizer(inputCol=\"text\", outputCol=\"words\")\n",
-    "hashingTF = HashingTF(inputCol=tokenizer.getOutputCol(), outputCol=\"features\")\n",
-    "nb = NaiveBayes(smoothing=1.0, modelType=\"multinomial\")\n",
-    "pipeline = Pipeline(stages=[tokenizer, hashingTF, nb])\n",
+    "# split training & validation sets with 60% to training and use a seed value of 1987\n",
+    "splits = data_set.randomSplit([0.6, 0.4], 1987)\n",
+    "training_df = splits[0]\n",
+    "test_df = splits[1]\n",
     "\n",
-    "# Fit the pipeline to training documents.\n",
-    "model = pipeline.fit(training_df)\n",
-    "model.pi\n",
-    "model.theta"
+    "save_format = training_df.map(lambda row: str(row[0]+'\\t'+row[1]+'\\t'+str(row[2])))\n",
+    "save_format.saveAsTextFile('data/clean_training_split')\n",
+    "save_format = test_df.map(lambda row: str(row[0]+'\\t'+row[1]+'\\t'+str(row[2])))\n",
+    "save_format.saveAsTextFile('data/clean_test_split')"
    ]
   },
   {
@@ -110,9 +87,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prepare test documents, which are unlabeled (id, text) tuples.\n",
-    "test_df = 0\n",
+    "# Configure an ML pipeline, which consists of tree stages: tokenizer, hashingTF, and nb.\n",
+    "tokenizer = Tokenizer(inputCol=\"text\", outputCol=\"words\")\n",
+    "hashingTF = HashingTF(inputCol=tokenizer.getOutputCol(), outputCol=\"features\")\n",
+    "nb = NaiveBayes(smoothing=1.0, modelType=\"multinomial\")\n",
+    "pipeline = Pipeline(stages=[tokenizer, hashingTF, nb])\n",
     "\n",
+    "# Fit the pipeline to training documents.\n",
+    "model = pipeline.fit(training_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Make predictions on test documents and print columns of interest.\n",
     "result = model.transform(test_df)\n",
     "result.prediction\n",
