--- a/nlp_with_spark.ipynb
+++ b/nlp_with_spark.ipynb
@@ -62,7 +62,7 @@
     "# Filter bad rows out\n",
     "garantee_col_rdd = parts_rdd.filter(lambda l: len(l) == 3)\n",
     "# Create DataFrame\n",
-    "data_df = sqlContext.createDataFrame(garantee_col_rdd, [\"text\", \"id\", \"label\"])"
+    "data_df = sqlContext.createDataFrame(garantee_col_rdd, [\"text\", \"id\", \"text_label\"])"
    ]
   },
   {
