--- a/nlp_with_spark.ipynb
+++ b/nlp_with_spark.ipynb
@@ -72,7 +72,7 @@
    "outputs": [],
    "source": [
     "# predict language and filter out those with less than 90% chance of being English\n",
-    "lang_df = training_df.withColumn(\"lang\", check_lang_udf(data_df[\"text\"]))\n",
+    "lang_df = data_df.withColumn(\"lang\", check_lang_udf(data_df[\"text\"]))\n",
     "en_df = lang_df.filter(lang_df[\"lang\"] == \"en\")"
    ]
   },
