added cross validation

--- a/nlp_with_spark.ipynb
+++ b/nlp_with_spark.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,29 +245,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "result = cvModel.transform(test_df)\n",
     "prediction_df = result.select(\"text\", \"label\", \"prediction\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------+-----+----------+\n|                text|label|prediction|\n+--------------------+-----+----------+\n|acolyte warmachin...|  3.0|       2.0|\n|agree need keep m...|  3.0|       1.0|\n|alright entourage...|  3.0|       0.0|\n|alternative thank...|  3.0|       2.0|\n|annual spring cle...|  3.0|       2.0|\n|anyone aware acad...|  3.0|       2.0|\n|api script servic...|  1.0|       0.0|\n|artificialintelli...|  1.0|       1.0|\n|available skorne ...|  3.0|       2.0|\n|avoid fine penalt...|  3.0|       2.0|\n|barton armed scho...|  3.0|       2.0|\n|based learning bi...|  1.0|       1.0|\n|bedfordshire poli...|  3.0|       2.0|\n|beginning week ja...|  3.0|       0.0|\n|being new company...|  3.0|       2.0|\n|best part econ pa...|  3.0|       2.0|\n|best photo human ...|  3.0|       2.0|\n|better bulldog bu...|  3.0|       2.0|\n|better throw same...|  3.0|       2.0|\n|big data essentia...|  3.0|       1.0|\n+--------------------+-----+----------+\nonly showing top 20 rows\n\n"
-     ]
-    }
-   ],
-   "source": [
-    "prediction_df.show()"
    ]
   },
   {
@@ -279,7 +262,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------------------+-----+----------+\n|                text|label|prediction|\n+--------------------+-----+----------+\n|multitun tunnel a...|  0.0|       0.0|\n|phdfootball scrip...|  0.0|       2.0|\n|python pic learn ...|  0.0|       2.0|\n|redis python modu...|  0.0|       0.0|\n|starterlearningpy...|  0.0|       2.0|\n|survival analysis...|  0.0|       1.0|\n|teleport json typ...|  0.0|       2.0|\n|command line tool...|  0.0|       0.0|\n|tckimlik personal...|  0.0|       0.0|\n|more tool data vi...|  0.0|       1.0|\n|python script tir...|  0.0|       2.0|\n|thirtylol lol src...|  0.0|       2.0|\n|good read impleme...|  0.0|       1.0|\n|html validator te...|  0.0|       2.0|\n|article tune regu...|  0.0|       0.0|\n|chainer dcgan cha...|  0.0|       2.0|\n|credstash utility...|  0.0|       2.0|\n|bot data analysis...|  0.0|       0.0|\n|data migration bl...|  0.0|       0.0|\n|great guide data ...|  0.0|       0.0|\n+--------------------+-----+----------+\nonly showing top 20 rows\n\n"
+      "+--------------------+-----+----------+\n|                text|label|prediction|\n+--------------------+-----+----------+\n|big boy toy drone...|  0.0|       1.0|\n|big data result d...|  0.0|       1.0|\n|big data service ...|  0.0|       0.0|\n|       big data wild|  0.0|       0.0|\n|bigdata algorithm...|  0.0|       0.0|\n|bigdata analytics...|  0.0|       0.0|\n|cognitive technol...|  0.0|       0.0|\n|company fight rec...|  0.0|       1.0|\n|data asset inconv...|  0.0|       0.0|\n|data lover kirk b...|  0.0|       0.0|\n|data science hunc...|  0.0|       0.0|\n|datascientists ne...|  0.0|       0.0|\n|facebook data sci...|  0.0|       1.0|\n|foodindustry plan...|  0.0|       1.0|\n|future datascienc...|  0.0|       0.0|\n|gonzalezcarmen th...|  0.0|       0.0|\n|important editori...|  0.0|       0.0|\n|intel doubling co...|  0.0|       0.0|\n|iot analytics edg...|  0.0|       0.0|\n|irish start ups m...|  0.0|       1.0|\n+--------------------+-----+----------+\nonly showing top 20 rows\n\n"
      ]
     }
    ],
@@ -290,11 +273,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----+----------+\n|                text|label|prediction|\n+--------------------+-----+----------+\n|acolyte warmachin...|  1.0|       1.0|\n|alfred producthun...|  1.0|       0.0|\n|alternative thank...|  1.0|       1.0|\n|america greatest ...|  1.0|       1.0|\n|animatic hell lot...|  1.0|       1.0|\n|annual spring cle...|  1.0|       1.0|\n|anyone think secu...|  1.0|       1.0|\n|are looking someo...|  1.0|       1.0|\n|avoid fine penalt...|  1.0|       1.0|\n|bad news toe brin...|  1.0|       1.0|\n|barton armed scho...|  1.0|       1.0|\n|basic classificat...|  1.0|       1.0|\n|bedfordshire poli...|  1.0|       1.0|\n|beginning week ja...|  1.0|       1.0|\n|being new company...|  1.0|       1.0|\n|best part econ pa...|  1.0|       1.0|\n|best photo human ...|  1.0|       1.0|\n|better bulldog bu...|  1.0|       1.0|\n|better throw same...|  1.0|       1.0|\n|big idea disrupt ...|  1.0|       1.0|\n+--------------------+-----+----------+\nonly showing top 20 rows\n\n"
+     ]
+    }
+   ],
+   "source": [
+    "ao_df = prediction_df.filter(prediction_df['label']==1.0)\n",
+    "ao_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "# TODO Add join back to original text\n",
+    "# TODO fix raw_classification labels\n",
+    "# TODO show accuracy measures"
    ]
   }
  ],
