--- a/nlp_with_spark.ipynb
+++ b/nlp_with_spark.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idf = IDF(minDocFreq=3, inputCol=\"tf\", outputCol=\"idf\")\n",
+    "idf.fit(df).transform(df).head().idf\n",
+    "\n",
+    "idf.setParams(outputCol=\"freqs\").fit(df).transform(df).collect()[1].freqs\n",
+    "\n",
+    "params = {idf.minDocFreq: 1, idf.outputCol: \"vector\"}\n",
+    "idf.fit(df, params).transform(df).head().vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,8 +243,9 @@
     "# Configure an ML pipeline, which consists of tree stages: tokenizer, hashingTF, and nb.\n",
     "tokenizer = Tokenizer(inputCol=\"text\", outputCol=\"words\")\n",
     "hashingTF = HashingTF(inputCol=tokenizer.getOutputCol(), outputCol=\"features\")\n",
+    "idf = IDF(minDocFreq=3, inputCol=\"features\", outputCol=\"idf\")\n",
     "nb = NaiveBayes()\n",
-    "pipeline = Pipeline(stages=[tokenizer, hashingTF, nb])\n",
+    "pipeline = Pipeline(stages=[tokenizer, hashingTF, idf, nb])\n",
     "\n",
     "\n",
     "paramGrid = ParamGridBuilder().addGrid(nb.smoothing, [0.0, 1.0]).build()\n",
@@ -245,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -298,6 +314,26 @@
     "# TODO Add join back to original text\n",
     "# TODO fix raw_classification labels\n",
     "# TODO show accuracy measures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.ml.evaluation import RegressionEvaluator\n",
+    "evaluator = RegressionEvaluator(predictionCol=\"raw\")\n",
+    "evaluator.evaluate(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
    ]
   }
  ],
