--- a/nlp_with_spark.ipynb
+++ b/nlp_with_spark.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,12 +46,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load a text file and convert each line to a Row.\n",
-    "data_rdd = sc.textFile(\"data/raw_classified.txt\")\n",
+    "data_rdd = sc.textFile(\"data/toy_set.txt\")\n",
     "parts_rdd = data_rdd.map(lambda l: l.split(\"\\t\"))\n",
     "# Filter bad rows out\n",
     "garantee_col_rdd = parts_rdd.filter(lambda l: len(l) == 3)\n",
@@ -61,9 +61,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+------------------+----------+\n|                text|                id|text_label|\n+--------------------+------------------+----------+\n|What's my best op...|514511437985611776|    python|\n|RT @AnthonyNystro...|492887601045467137|    python|\n|RT @raymondh: #py...|464730495213768704|    python|\n|Checked out https...|443215773168066560|    python|\n|#openscience and ...|443004371425849344|    python|\n+--------------------+------------------+----------+\nonly showing top 5 rows\n\n+--------------------+------------------+----------+----+\n|                text|                id|text_label|lang|\n+--------------------+------------------+----------+----+\n|What's my best op...|514511437985611776|    python|  en|\n|RT @AnthonyNystro...|492887601045467137|    python|  en|\n|RT @raymondh: #py...|464730495213768704|    python|  en|\n|Checked out https...|443215773168066560|    python|  en|\n|#openscience and ...|443004371425849344|    python|  en|\n+--------------------+------------------+----------+----+\nonly showing top 5 rows\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# predict language and filter out those with less than 90% chance of being English\n",
     "lang_df = data_df.withColumn(\"lang\", check_lang_udf(data_df[\"text\"]))\n",
@@ -72,9 +87,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------------------------------------------------------------------------------------------------------------------------+\n|text                                                                                                                             |\n+---------------------------------------------------------------------------------------------------------------------------------+\n|What's my best option for doing a MANOVA in #python ? A brief google search leaves me thinking R is the way to go. #pydata #stats|\n+---------------------------------------------------------------------------------------------------------------------------------+\nonly showing top 1 row\n\n+--------------------------------------------------------------------------------------------------+\n|stop_text                                                                                         |\n+--------------------------------------------------------------------------------------------------+\n|What's best option MANOVA #python ? A brief google search leaves thinking R way go. #pydata #stats|\n+--------------------------------------------------------------------------------------------------+\nonly showing top 1 row\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# remove stop words to reduce dimensionality\n",
     "rm_stops_df = en_df.withColumn(\"stop_text\", remove_stops_udf(en_df[\"text\"]))"
@@ -82,9 +112,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------------------------------------------------------------------------------------------------------------------------------+\n|stop_text                                                                                                                                 |\n+------------------------------------------------------------------------------------------------------------------------------------------+\n|What's best option MANOVA #python ? A brief google search leaves thinking R way go. #pydata #stats                                        |\n|RT @AnthonyNystrom: ML py -&gt; curated list awesome Machine Learning frameworks, libraries software -&gt; https://t.co/leY5PUi7Lh #python|\n|RT @raymondh: #python data analysis commandment: Thou shalt access thine fields indexing. Instead, use #pandas dataframes nam…            |\n|Checked https://t.co/Zj7Wry6vKh text-to-speech #python worked like champion box!                                                          |\n|#openscience #python peeps: want service share research data; looking @figshare want built-in ipython notebook viewing. Ideas?            |\n+------------------------------------------------------------------------------------------------------------------------------------------+\nonly showing top 5 rows\n\n+------------------------------------------------------------------------------------------------------------+\n|feat_text                                                                                                   |\n+------------------------------------------------------------------------------------------------------------+\n|what  best option manova python  brief google search leaves thinking  way  pydata stats                     |\n|     curated list awesome machine learning frameworks libraries software  python                            |\n|  python data analysis commandment thou shalt access thine fields indexing instead use pandas dataframes    |\n|checked text  speech python worked like champion box                                                        |\n|openscience python peeps want service share research data looking want built  ipython notebook viewing ideas|\n+------------------------------------------------------------------------------------------------------------+\nonly showing top 5 rows\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# remove other non essential words, think of it as my personal stop word list\n",
     "rm_features_df = rm_stops_df.withColumn(\"feat_text\", remove_features_udf(rm_stops_df[\"stop_text\"]))"
@@ -92,9 +137,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------------------------------------------------------------------------------------------------+\n|feat_text                                                                                                   |\n+------------------------------------------------------------------------------------------------------------+\n|what  best option manova python  brief google search leaves thinking  way  pydata stats                     |\n|     curated list awesome machine learning frameworks libraries software  python                            |\n|  python data analysis commandment thou shalt access thine fields indexing instead use pandas dataframes    |\n|checked text  speech python worked like champion box                                                        |\n|openscience python peeps want service share research data looking want built  ipython notebook viewing ideas|\n+------------------------------------------------------------------------------------------------------------+\nonly showing top 5 rows\n\n+-------------------------------------------------------------------------------------------------------------+\n|tagged_text                                                                                                  |\n+-------------------------------------------------------------------------------------------------------------+\n| best option manova python brief google search leaves thinking way pydata stats                              |\n| curated list awesome machine learning frameworks libraries software python                                  |\n| python data analysis commandment thou shalt access thine fields indexing use pandas dataframes              |\n| checked text speech python worked champion box                                                              |\n| openscience python peeps want service share research data looking want built ipython notebook viewing ideas |\n+-------------------------------------------------------------------------------------------------------------+\nonly showing top 5 rows\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# tag the words remaining and keep only Nouns, Verbs and Adjectives\n",
     "tagged_df = rm_features_df.withColumn(\"tagged_text\", tag_and_remove_udf(rm_features_df[\"feat_text\"]))"
@@ -102,9 +162,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------------------------------------------------------------------------------------------------+\n|tagged_text                                                                                                  |\n+-------------------------------------------------------------------------------------------------------------+\n| best option manova python brief google search leaves thinking way pydata stats                              |\n| curated list awesome machine learning frameworks libraries software python                                  |\n| python data analysis commandment thou shalt access thine fields indexing use pandas dataframes              |\n| checked text speech python worked champion box                                                              |\n| openscience python peeps want service share research data looking want built ipython notebook viewing ideas |\n| thanks missed john hunter rip matplotlib wonderful important legacy positivepython                          |\n| hats team fantastic way using python great stewardship project positivepython                               |\n| thanks virtualenvwrapper couldn productive positivepython                                                   |\n| thanks others responsible pandas hard calculate much time library saved positivepython                      |\n| thanks everyone else makes happen positivepython                                                            |\n| grateful hard work gone scientific python stack imagine science positivepython                              |\n| example morfessor trained using word corpus english anti dis establish ment arian ism python nlp            |\n| questions python don tweet use comp lang python look local user                                             |\n| thwarted hotel wifi flakey comp fine doesn needed files mysterious python versioning issues                 |\n| created many notebooks last days remember did need check logs nerdproblems ipython                          |\n+-------------------------------------------------------------------------------------------------------------+\n\n+---------------------------------------------------------------------------------------------------------+\n|lemm_text                                                                                                |\n+---------------------------------------------------------------------------------------------------------+\n|best option manova python brief google search leaf thinking way pydata stats                             |\n|curated list awesome machine learning framework library software python                                  |\n|python data analysis commandment thou shalt access thine field indexing use panda dataframes             |\n|checked text speech python worked champion box                                                           |\n|openscience python peep want service share research data looking want built ipython notebook viewing idea|\n|thanks missed john hunter rip matplotlib wonderful important legacy positivepython                       |\n|hat team fantastic way using python great stewardship project positivepython                             |\n|thanks virtualenvwrapper couldn productive positivepython                                                |\n|thanks others responsible panda hard calculate much time library saved positivepython                    |\n|thanks everyone else make happen positivepython                                                          |\n|grateful hard work gone scientific python stack imagine science positivepython                           |\n|example morfessor trained using word corpus english anti dis establish ment arian ism python nlp         |\n|question python don tweet use comp lang python look local user                                           |\n|thwarted hotel wifi flakey comp fine doesn needed file mysterious python versioning issue                |\n|created many notebook last day remember did need check log nerdproblems ipython                          |\n+---------------------------------------------------------------------------------------------------------+\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# lemmatization of remaining words to reduce dimensionality & boost measures\n",
     "lemm_df = tagged_df.withColumn(\"lemm_text\", lemmatize_udf(tagged_df[\"tagged_text\"]))"
@@ -214,21 +289,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idf = IDF(minDocFreq=3, inputCol=\"tf\", outputCol=\"idf\")\n",
-    "idf.fit(df).transform(df).head().idf\n",
-    "\n",
-    "idf.setParams(outputCol=\"freqs\").fit(df).transform(df).collect()[1].freqs\n",
-    "\n",
-    "params = {idf.minDocFreq: 1, idf.outputCol: \"vector\"}\n",
-    "idf.fit(df, params).transform(df).head().vector"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -318,13 +378,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9228856806385485"
+      ]
+     },
+     "execution_count": 12,
+     "output_type": "execute_result",
+     "metadata": {}
+    }
+   ],
    "source": [
-    "from pyspark.ml.evaluation import RegressionEvaluator\n",
-    "evaluator = RegressionEvaluator(predictionCol=\"raw\")\n",
-    "evaluator.evaluate(result)"
+    "from pyspark.ml.evaluation import MulticlassClassificationEvaluator\n",
+    "evaluator = MulticlassClassificationEvaluator(predictionCol=\"prediction\")\n",
+    "evaluator.evaluate(result, {evaluator.metricName: \"precision\"})"
    ]
   },
   {
