fixed ref to dedup_df

--- a/nlp_with_spark.ipynb
+++ b/nlp_with_spark.ipynb
@@ -148,7 +148,7 @@
    "outputs": [],
    "source": [
     "# select only the columns we care about\n",
-    "data_set = dedup_df.select(num_label_df['id'], num_label_df['text'], num_label_df['label'])"
+    "data_set = dedup_df.select(dedup_df['id'], dedup_df['text'], dedup_df['label'])"
    ]
   },
   {
